# unity-mcp

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  manifest.json  mcp_source.py
.claude/skills/: unity-mcp.md
.github/: PHASE1_FOUNDATION_WEEK1.md  UNITY_MCP_CLEAN_UNIQUE_PLAN.md  UNITY_MCP_CLEAN_UNIQUE_TASKLIST.md
MCPForUnity/: MCPForUnity.Editor.asmdef  package.json
MCPForUnity/Editor/: AssemblyInfo.cs  CommandRegistry.cs  JsonUtil.cs  MCPBridge.cs  McpForUnityToolAttribute.cs  UnityMCPWindow.cs
MCPForUnity/Runtime/: AssemblyInfo.cs  MCPForUnity.Runtime.asmdef
Server/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pyrightconfig.json
Server/src/: main.py
Server/src/cli/utils/: __init__.py  bootstrap.py  setup_doctor.py
Server/src/core/: config.py  constants.py  error_codes.py  job_contract.py  job_state_store.py  response_contract.py
Server/src/models/: models.py
Server/src/services/registry/: __init__.py  registry.py
Server/src/services/resources/: __init__.py
Server/src/services/state/: __init__.py
Server/src/services/tools/: __init__.py  batch_execute.py  create_script.py  execute_menu_item.py  find_gameobjects.py  manage_animation.py  manage_asset.py  manage_camera.py  manage_components.py  manage_editor.py  manage_gameobject.py  manage_material.py  manage_packages.py  manage_prefabs.py  manage_scene.py  manage_script.py  manage_shader.py  manage_texture.py  manage_tool_groups.py  manage_ui.py  manage_vfx.py  ping.py  project_info.py  read_console.py  refresh_unity.py  scene_auto_repair.py  script_apply_edits.py  utils.py  validate_script.py
Server/src/transport/: plugin_hub.py  unity_transport.py
Server/src/transport/legacy/: __init__.py  unity_connection.py
Server/tests/: conftest.py  test_core.py  test_http_transport.py  test_job_state_store.py  test_manage_tool_groups.py  test_phase1_foundation.py  test_registry.py  test_setup_doctor.py  test_week2_wrapper_rollout.py  test_week3_signature_features.py  test_week4_bootstrap.py
Server/tests/resources/: __init__.py
Server/tests/tools/: test_phase1_core_workflow.py
docs/development/: WEEK1_CLOSEOUT.md  WEEK2_BACKLOG.md  WEEK3_DEMO_AND_TUNING.md  WEEK4_BENCHMARK_REPORT.json  (+3 more)
tools/: benchmark_week4.py
(+39 files in other folders)
